; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/etnaviv/extr_etnaviv_buffer.c_CMD_SEM.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/etnaviv/extr_etnaviv_buffer.c_CMD_SEM.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.etnaviv_cmdbuf = type { i32 }

@VIVS_GL_SEMAPHORE_TOKEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.etnaviv_cmdbuf*, i32, i32)* @CMD_SEM to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CMD_SEM(%struct.etnaviv_cmdbuf* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.etnaviv_cmdbuf*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.etnaviv_cmdbuf* %0, %struct.etnaviv_cmdbuf** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.etnaviv_cmdbuf*, %struct.etnaviv_cmdbuf** %4, align 8
  %8 = load i32, i32* @VIVS_GL_SEMAPHORE_TOKEN, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @VIVS_GL_SEMAPHORE_TOKEN_FROM(i32 %9)
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @VIVS_GL_SEMAPHORE_TOKEN_TO(i32 %11)
  %13 = or i32 %10, %12
  %14 = call i32 @CMD_LOAD_STATE(%struct.etnaviv_cmdbuf* %7, i32 %8, i32 %13)
  ret void
}

declare dso_local i32 @CMD_LOAD_STATE(%struct.etnaviv_cmdbuf*, i32, i32) #1

declare dso_local i32 @VIVS_GL_SEMAPHORE_TOKEN_FROM(i32) #1

declare dso_local i32 @VIVS_GL_SEMAPHORE_TOKEN_TO(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
